# SofaOrigami

./: CMakeLists.txt  README.md  SofaOrigami.dox  SofaOrigamiConfig.cmake.in  origami.pyscn  origami.pyscn.qglviewer.view  waterbomb _ 0PercentFolded.fold  waterbomb.pyscn  waterbomb.pyscn.qglviewer.view  waterbombBase _ 0PercentFolded.fold
SofaOrigami_test/: CMakeLists.txt  MyBehaviorModel_test.cpp
doc/: index.html
python/: readFoldFormat.py
src/SofaOrigami/: MyBehaviorModel.cpp  MyBehaviorModel.h  MyDataWidgetUnsigned.cpp  MyDataWidgetUnsigned.h  MyVisualModel.cpp  MyVisualModel.h  OrigamiForceField.cpp  OrigamiForceField.h  OrigamiForceField.inl  RotationalSpringForceField.cpp  RotationalSpringForceField.h  RotationalSpringForceField.inl  config.h.in  initSofaOrigami.cpp
